--- a/default.css
+++ b/default.css
@@ -314,7 +314,7 @@ footer a{
         padding: 5vw;
         height: 10vw;
         width: 100vw;
-        font-size: 4vw;
+        font-size: 4.5vw;
         justify-content: space-around;
         align-items: center;
     }
@@ -343,7 +343,7 @@ footer a{
     }
 
     .info .mail{
-        font-size: 4vw;
+        font-size: 4.5vw;
         padding: 0 5vw;
     }
 
@@ -369,13 +369,14 @@ footer a{
 
     .sitemap h2{
         line-height: 8vw;
-        font-size: 4vw;
+        font-size: 4.5vw;
     }
     
     .sitemap .col a{
         display: block;
-        font-size: 3.5vw;
-        line-height: 6vw;
+        width: fit-content;
+        font-size: 4vw;
+        line-height: 6.5vw;
     }
     
     .row{
