--- a/default.css
+++ b/default.css
@@ -13,6 +13,22 @@
     --font-content: 'Comfortaa', cursive;
 }
 
+::-webkit-scrollbar {
+width: 1vw;
+}
+
+::-webkit-scrollbar-track {
+background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: #555;
+}
+
 body{
     background-color: var(--white);
 }
@@ -121,6 +137,18 @@ footer a{
 
 .info .mail:hover{
     color: var(--color-primary);
+}
+
+.error404{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+}
+
+.error404 lottie-player{
+    width: 50%;
+    margin-top: 10vw;
 }
 
 /* Mobile View */
@@ -394,6 +422,11 @@ footer a{
     
     .row .fa-regular{
         font-size: 14px;
+    }
+
+    .error404 lottie-player{
+        width: 80%;
+        margin-top: 30vw;
     }
 }
 
@@ -811,13 +844,14 @@ footer a{
 
     footer .cta{
         padding: 0px 8vw;
-        width: 100vw;
+        width: 100%;
         height: 4vw;
         background-color: var(--color-primary);
         color: var(--off-white);
         display: flex;
         justify-content: space-between;
         align-items: center;
+        overflow: hidden;
     }
 
     footer .cta h2{
