--- a/template/template.html
+++ b/template/template.html
@@ -20,8 +20,8 @@
     <link rel="apple-touch-icon" href="https://getprojects.tech/images/logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="getprojects.tech/css/default.css" as="style">
-    <link rel="stylesheet" href="getprojects.tech/css/default.css">
+    <link rel="preload" href="https://getprojects.tech/css/default.css" as="style">
+    <link rel="stylesheet" href="https://getprojects.tech/css/default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,7 +88,7 @@
                 <a alt="Facebook" href="https://www.facebook.com/youtube.com.TMtechnomania" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 <a alt="Chrome Extension" href="https://chrome.google.com/webstore/detail/tm-launcher/ppgcdhfpgpiecpjaobadcaigbhmkpgob" target="_blank"><i class="fa-brands fa-chrome"></i></a>
                 <a alt="Instagram" href="https://instagram.com/kartikeytiwari" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a alt="Developer Portfolio" href="getprojects.tech/portfolio" target="_blank"><i class="fa-solid fa-user"></i></a>
+                <a alt="Developer Portfolio" href="https://getprojects.tech/portfolio" target="_blank"><i class="fa-solid fa-user"></i></a>
             </div>
         </div>
 
