--- a/template/template.html
+++ b/template/template.html
@@ -49,7 +49,7 @@
 
     <header>
         <div class="brand">
-            <a href="https://getprojects.tech/"><img src="./images/logo.webp" alt="GetProjects" srcset="./images/logo.webp"></a>
+            <a href="https://getprojects.tech/"><img src="https://getprojects.tech//images/logo.webp" alt="GetProjects" srcset="https://getprojects.tech//images/logo.webp"></a>
             <a href="https://getprojects.tech/" target="_self"><h1>GetProjects</h1></a>
         </div>
 
